--- a/new.html
+++ b/new.html
@@ -25,6 +25,7 @@
                 scale="2">
             </a-entity>
         </a-marker>
+        <a-marker preset='hiro'></a-marker>
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
         <a-entity camera></a-entity>
