--- a/new.html
+++ b/new.html
@@ -25,7 +25,14 @@
                 scale="2">
             </a-entity>
         </a-marker>
-        <a-marker preset='hiro'></a-marker>
+
+        <!-- my markers -->
+        <a-marker preset='hiro'>
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
+        <a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/qr-code.png">
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
         <a-entity camera></a-entity>
