--- a/example_2.html
+++ b/example_2.html
@@ -3,7 +3,15 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		
+		<a-marker preset='hiro'>
+			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+		</a-marker>
+		<a-marker preset='kanji'>
+			<a-box position='0 0.5 0' material='opacity: 1;'></a-box>
+		</a-marker>
+		<a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/qr-code.png">
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
 	</a-scene>
 </body>
