--- a/example_2.html
+++ b/example_2.html
@@ -10,7 +10,7 @@
 		<a-marker preset='kanji'>
 			<a-box position='0 0.5 0' material='opacity: 1;'></a-box>
 		</a-marker>
-		<a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/qr-code.png">
+		<a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/qr-code.png">
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 	</a-scene>
