--- a/example_2.html
+++ b/example_2.html
@@ -4,6 +4,6 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker-camera>
+		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
