--- a/custom_object.html
+++ b/custom_object.html
@@ -1,4 +1,4 @@
-<!-- my example working -->
+<!-- custom_object.html -->
 <!DOCTYPE html>
 <html>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -12,7 +12,7 @@
         <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+          fbx-model="src: url(https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.json)"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
