--- a/custom_object.html
+++ b/custom_object.html
@@ -12,7 +12,7 @@
         <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
-          fbx-model="src: url(https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.json)"
+          fbx-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.json"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
