--- a/ply.html
+++ b/ply.html
@@ -1,4 +1,4 @@
-<!-- custom_object.html -->
+<!-- ply model -->
 <!DOCTYPE html>
 <html>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -13,7 +13,7 @@
         <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
-          fbx-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.json"
+          ply-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.ply"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
