--- a/glft.html
+++ b/glft.html
@@ -9,10 +9,15 @@
       <!-- <a-marker preset="hiro"> -->
       	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
 	   <!-- <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker> -->
-        <a-entity
+        <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.glft"
+        ></a-entity> -->
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
