--- a/glft.html
+++ b/glft.html
@@ -10,8 +10,9 @@
       	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
 	   <!-- <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker> -->
         <a-entity
-          position="0 2 0"
-          scale="1 1 1"
+          rotation="90 0 0"
+          position="0 0 0"
+          scale="0.5 0.5 0.5"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
         ></a-entity>
         <!-- <a-entity
