--- a/glft.html
+++ b/glft.html
@@ -9,12 +9,13 @@
       <!-- <a-marker preset="hiro"> -->
       	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
 	   <!-- <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker> -->
-        <a-entity
-          rotation="90 90 90"
-          position="0 0 0"
-          scale="0.5 0.5 0.5"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
-        ></a-entity>
+        <a-entity rotation="35 10 40">
+          <a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
+          ></a-entity>
+        </a-entity>
         <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
