--- a/bee.html
+++ b/bee.html
@@ -6,8 +6,8 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <!-- <a-marker preset="hiro"> -->
-      	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt">
+      <a-marker preset="hiro">
+      	<!-- <a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt"> -->
 	   <!-- <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker> -->
         <a-entity rotation="-90 0 0">
           <a-entity
