--- a/bee.html
+++ b/bee.html
@@ -13,8 +13,13 @@
           <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.fbx"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
           ></a-entity>
+          <!-- <a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.fbx"
+          ></a-entity> -->
         </a-entity>
         <!-- <a-entity
           position="0 0 0"
