--- a/bee.html
+++ b/bee.html
@@ -10,16 +10,16 @@
       	<!-- <a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt"> -->
 	   <!-- <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker> -->
         <a-entity rotation="-90 0 0">
-          <a-entity
-            position="0 0 0"
-            scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
-          ></a-entity>
           <!-- <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.fbx"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
           ></a-entity> -->
+          <a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.gltf"
+          ></a-entity>
         </a-entity>
         <!-- <a-entity
           position="0 0 0"
