--- a/bee.html
+++ b/bee.html
@@ -8,7 +8,7 @@
     <a-scene embedded arjs>
       <!-- <a-marker preset="hiro"> -->
       	<!-- <a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt"> -->
-	   <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt"></a-marker>
+	   <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
         <a-entity rotation="-90 0 0">
           <!-- <a-entity
             position="0 0 0"
