--- a/bee.html
+++ b/bee.html
@@ -7,7 +7,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <!-- <a-marker preset="hiro"> -->
-    	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt">
+    <!-- 	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt">
         <a-entity rotation="-90 0 0">
           <a-entity
             position="0 0 0"
@@ -15,7 +15,7 @@
             gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.gltf"
           ></a-entity>
         </a-entity>
-      </a-marker>
+      </a-marker> -->
 
       <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
         <a-entity rotation="-90 0 0">
