--- a/bee.html
+++ b/bee.html
@@ -7,6 +7,21 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <!-- <a-marker preset="hiro"> -->
+      <a-marker type="pattern" preset="custom" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/pattern-ab.patt">
+        <a-entity rotation="-90 0 0">
+          <a-entity
+            position="0 0 0"
+            scale="0.5 0.5 0.5"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
+          ></a-entity>
+        </a-entity>
+        <!-- <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"
+        ></a-entity> -->
+      </a-marker>
+      
     	<a-marker type="pattern" url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/bEE.patt">
         <a-entity rotation="-90 0 0">
           <a-entity
@@ -16,7 +31,6 @@
           ></a-entity>
         </a-entity>
       </a-marker>
-
       <a-entity camera></a-entity>
     </a-scene>
   </body>
