--- a/bee.html
+++ b/bee.html
@@ -12,7 +12,7 @@
           <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
           ></a-entity>
         </a-entity>
         <!-- <a-entity
@@ -27,7 +27,7 @@
           <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/_Glam%20Bee.gltf"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
           ></a-entity>
         </a-entity>
       </a-marker>
