--- a/bee.html
+++ b/bee.html
@@ -12,7 +12,7 @@
           <a-entity
             position="0 0 0"
             scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
           ></a-entity>
         </a-entity>
         <!-- <a-entity
@@ -26,7 +26,7 @@
         <a-entity rotation="-90 0 0">
           <a-entity
             position="0 0 0"
-            scale="0.5 0.5 0.5"
+            scale="0.1 0.1 0.1"
             gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
           ></a-entity>
         </a-entity>
