--- a/bee.html
+++ b/bee.html
@@ -26,8 +26,8 @@
         <a-entity rotation="-90 0 0">
           <a-entity
             position="0 0 0"
-            scale="0.01 0.01 0.01"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
+            scale="0.1 0.1 0.1"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee_.gltf"
           ></a-entity>
         </a-entity>
       </a-marker>
