--- a/bee.html
+++ b/bee.html
@@ -29,7 +29,7 @@
           <a-entity
             position="0 0 0"
             scale="0.01 0.01 0.01"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/Blender%20file%20bee.gltf"
           ></a-entity>
         </a-entity>
       </a-marker>
