--- a/bee.html
+++ b/bee.html
@@ -30,7 +30,7 @@
             position="0 0 0"
             scale="0.01 0.01 0.01"
             gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/Blender_file_bee.gltf"
-            animation-mixer
+            animation-mixer="clip: *; loop:once"
           ></a-entity>
         </a-entity>
       </a-marker>
