--- a/bee.html
+++ b/bee.html
@@ -13,8 +13,8 @@
         <a-entity rotation="-90 0 0">
           <a-entity
             position="0 0 0"
-            scale="0.5 0.5 0.5"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/assets/monkey.gltf"
+            scale="0.01 0.01 0.01"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/Blender_file_bee.gltf"
           ></a-entity>
         </a-entity>
         <!-- <a-entity
