--- a/bee.html
+++ b/bee.html
@@ -4,6 +4,7 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs
       renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
