--- a/bee.html
+++ b/bee.html
@@ -1,10 +1,12 @@
 <!-- glft -->
 <!DOCTYPE html>
 <html>
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
+  <head>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <!-- we import arjs version without NFT but with marker + location based support -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
+  </head>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs
       renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
@@ -31,7 +33,7 @@
             position="0 0 0"
             scale="0.01 0.01 0.01"
             gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/mirkan1/artifical-berlin/master/WebAR%20Project/ABELHA%203D/main_bee.gltf"
-            animation-mixer="clip: *; loop:once"
+            animation-mixer
           ></a-entity>
         </a-entity>
       </a-marker>
